# ROAR

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  todos.md
data_extras/: all_measurement_channels name.csv  all_measurement_channels_name.csv  speed.csv  tracks.csv  tyres.csv
results/: dummy_logo_vehicle_results.csv  lgbm_logo_vehicle_results.csv  log_reg_logo_vehicle_results.csv  measure_logo_cv.csv  measure_logo_results.csv  rf_logo_measure_results.csv  svc_logo_vehicle_results.csv  tabpfn_emb_lgbm_logo_vehicle_results.csv  tabpfn_emb_log_reg_logo_vehicle_results.csv  tabpfn_emb_rf_logo_vehicle_results.csv  tabpfn_emb_svc_logo_vehicle_results.csv  tabpfn_emb_xgb_logo_vehicle_results.csv  tabpfn_logo_measure_results.csv  xgb_logo_measure_results.csv  xgb_logo_vehicle_results.csv
src/roar/: __init__.py
src/roar/notebooks/: 00file_naming.ipynb  04autoencoder.ipynb
src/roar/notenbooks/: 01explore.ipynb  02analyze.ipynb  03train.ipynb  04autoencoder.ipynb  04train_opt.ipynb  05autoencoder.ipynb  05plot_scores.ipynb  06feature_importances.ipynb  06plot_scores.ipynb  07feature_importances.ipynb  explore.ipynb  lgbm_logo_measure_results.csv  log_reg_logo_measure_results.csv  model_comparison_results.csv  rf_logo_vehicle_results.csv  svc_logo_measure_results.csv  tabpfn_logo_vehicle_results.csv  vehicle_logo_results.csv
src/roar/preprocessing/: __init__.py  features.py  fix_channel_names.py  load_data.py
