[project]
authors = [{name = "Moritz Feik", email = "uxlha@student.kit.edu"}]
name = "ROAR"
version = "0.1.0"
requires-python = ">=3.14.0,<3.15"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixitasks]

[tool.pixi.dependencies]

[tool.pixi.pypi-dependencies]
roar = { path = ".", editable = true }