[project]
authors = [{name = "Moritz Feik", email = "uxlha@student.kit.edu"}]
name = "ROAR"
version = "0.1.0"
requires-python = ">=3.13.0,<3.14"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixitasks]

[tool.pixi.dependencies]
pre-commit = ">=4.4.0,<5"
ipykernel = ">=7.1.0,<8"
polars = ">=1.35.1,<2"
h5py = ">=3.15.1,<4"
seaborn = ">=0.13.2,<0.14"
pyarrow = ">=22.0.0,<23"
scipy = ">=1.16.3,<2"
numba = ">=0.62.1,<0.63"
librosa = ">=0.11.0,<0.12"

[tool.pixi.pypi-dependencies]
roar = { path = ".", editable = true }
